2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Cheaper adjustment of pointer in p.
	* support/regression/tests/bug-2885.c:
	  Test for bug #2885.

2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix calculation of cycle cost.
	* support/regression/tests/gcc-torture-execute-va-arg-19.c,
	  support/regression/tests/gcc-torture-execute-960302-1.c,
	  support/regression/tests/getbyte.c,
	  support/regression/tests/literalop.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* support/regression/tests/gcc-torture-execute-20041011-1.c:
	  Redisable test for ds390 that got enabled accientially.
	* support/regression/tests/gcc-torture-execute-pr34456.c:
	  Disable a test for ds390, where it fails (bug #2883).
	* sim/ucsim/pdk.src/glob.cc:
	  Fix ret k debug output, patch by Nicolas Lesser.
	* src/SDCCglue.c:
	  Fix initalization of const pointers to non-const char for pdk.
	* src/pdk/ralloc2.cc,
	  support/regression/tests/bug2817646.c:
	  Improve register allocation for pointer read and some arithmetic operations.
	* support/regression/tests/gcc-torture-execute-20051110-2.c:
	  Disable test that fails due to bug #2884.
	* src/SDCCopt.c:
	  Move width optimization so that it gets proper information from ic sequencing.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/cse.c,
	  support/regression/tests/gcc-torture-execute-991216-2.c,
	  support/regression/tests/gcc-torture-execute-pr70005.c,
	  support/regression/tests/swap.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* Merged pdk branch to trunk.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20180112-1.c,
	  support/regression/tests/gcc-torture-execute-920922-1.c,